--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
+    "@iconify-icon/solid": "^2.3.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.1",
     "vite-plugin-solid": "^2.11.6"
